add classes and adapt tests