@@ -1,7 +1,12 @@
-package com.challemnge.w2m.superheros.controller;
+package com.challenge.w2m.superheros.controller;
 
+import com.challenge.w2m.superheros.entity.Superhero;
+import com.challenge.w2m.superheros.exception.ApiException;
+import com.challenge.w2m.superheros.service.SuperheroService;
+import com.challenge.w2m.superheros.constants.Constants;
+import com.challenge.w2m.superheros.mocks.Mocks;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -10,9 +15,8 @@ import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
-import static com.challemnge.w2m.superheros.constants.Constants.*;
-import static com.challemnge.w2m.superheros.mocks.Mocks.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -36,10 +40,10 @@ public class SuperheroControllerTest {
     class TestPostMethod {
         @Test
         @DisplayName("Test when superhero is saved successfully")
-        void testWhenSuperheroIsSavedSuccessfully() {
-            SuperHero request = mockSuperhero();
-            superheroServiceExistsByNameMock(superheroService, false);
-            superheroServiceSaveMock(superheroService, request);
+        void testWhenSuperheroIsSavedSuccessfully() throws Exception {
+            Superhero request = Mocks.mockSuperhero();
+            Mocks.superheroServiceExistsByNameMock(superheroService, false);
+            Mocks.superheroServiceSaveMock(superheroService, request);
 
             mvc.perform(post("/w2m/superhero/save")
                             .content(mapper.writeValueAsString(request))
@@ -52,11 +56,11 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when fails saving superhero data")
         void testWhenFailsSavingSuperheroData() throws Exception {
-            superheroServiceExistsByNameMock(superheroService, false);
-            superheroServiceSaveThrowsExceptionMock(superheroService, new ApiException("Error saving data"));
+            Mocks.superheroServiceExistsByNameMock(superheroService, false);
+            Mocks.superheroServiceSaveThrowsExceptionMock(superheroService, new ApiException("Error saving data"));
 
             mvc.perform(post("/w2m/superhero/save")
-                            .content(mapper.writeValueAsString(mockSuperhero()))
+                            .content(mapper.writeValueAsString(Mocks.mockSuperhero()))
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isInternalServerError());
@@ -65,7 +69,7 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when fails saving superhero by bad request")
         void testWhenFailsSavingSuperheroByBadRequest() throws Exception {
-            superheroServiceSaveMock(superheroService, null);
+            Mocks.superheroServiceSaveMock(superheroService, null);
 
             mvc.perform(post("/w2m/superhero/save")
                             .content("{}")
@@ -76,11 +80,11 @@ public class SuperheroControllerTest {
 
         @Test
         @DisplayName("Test when trying to save a superhero but it alreadi exists")
-        void testWhenTryingToSaveASuperheroButItAlreadyExists() {
-            superheroServiceExistsByNameMock(superheroService, true);
+        void testWhenTryingToSaveASuperheroButItAlreadyExists() throws Exception {
+            Mocks.superheroServiceExistsByNameMock(superheroService, true);
 
             mvc.perform(post("/w2m/superhero/save")
-                            .content(mapper.writeValueAsString(mockSuperhero()))
+                            .content(mapper.writeValueAsString(Mocks.mockSuperhero()))
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isBadRequest());
@@ -92,13 +96,14 @@ public class SuperheroControllerTest {
     class TestPutMethod {
         @Test
         @DisplayName("Test when superhero is updated successfully")
-        void testWhenSuperheroIsUpdatedSuccessfully() {
-            SuperHero request = mockSuperhero();
-            superheroServiceExistsByIdMock(superheroService, true);
-            superheroServiceExistsByNameMock(superheroService, false);
-            superheroServiceUpdateMock(superheroService, request);
+        void testWhenSuperheroIsUpdatedSuccessfully() throws Exception {
+            Superhero request = Mocks.mockSuperhero();
+            Mocks.superheroServiceExistsByIdMock(superheroService, true);
+            Mocks.superheroServiceExistsByNameMock(superheroService, false);
+            Mocks.superheroServiceFindByIdMock(superheroService, Mocks.mockSuperhero());
+            Mocks.superheroServiceSaveMock(superheroService, request);
 
-            mvc.perform(put("/w2m/superhero/update/" + SUPERHERO_ID)
+            mvc.perform(MockMvcRequestBuilders.put("/w2m/superhero/update/" + Constants.SUPERHERO_ID)
                             .content(mapper.writeValueAsString(request))
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
@@ -108,12 +113,13 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when fails updating superhero data")
         void testWhenFailsUpdatingSuperheroData() throws Exception {
-            superheroServiceExistsByIdMock(superheroService, true);
-            superheroServiceExistsByNameMock(superheroService, false);
-            superheroServiceUpdateThrowsExceptionMock(superheroService, new ApiException("Error updating data"));
+            Mocks.superheroServiceExistsByIdMock(superheroService, true);
+            Mocks.superheroServiceExistsByNameMock(superheroService, false);
+            Mocks.superheroServiceFindByIdMock(superheroService, Mocks.mockSuperhero());
+            Mocks.superheroServiceSaveThrowsExceptionMock(superheroService, new ApiException("Error updating data"));
 
-            mvc.perform(put("/w2m/superhero/update/" + SUPERHERO_ID)
-                            .content(mapper.writeValueAsString(mockSuperhero()))
+            mvc.perform(MockMvcRequestBuilders.put("/w2m/superhero/update/" + Constants.SUPERHERO_ID)
+                            .content(mapper.writeValueAsString(Mocks.mockSuperhero()))
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isInternalServerError());
@@ -122,9 +128,9 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when fails saving superhero by bad request")
         void testWhenFailsUpdatingSuperheroByBadRequest() throws Exception {
-            superheroServiceUpdateMock(superheroService, null);
+            Mocks.superheroServiceSaveMock(superheroService, null);
 
-            mvc.perform(put("/w2m/superhero/update/" + SUPERHERO_ID)
+            mvc.perform(MockMvcRequestBuilders.put("/w2m/superhero/update/" + Constants.SUPERHERO_ID)
                             .content("{}")
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
@@ -134,10 +140,10 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when fails updating superhero by id not found")
         void testWhenFailsUpdatingSuperheroByIdNotFound() throws Exception {
-            superheroServiceExistsByIdMock(superheroService, false);
+            Mocks.superheroServiceExistsByIdMock(superheroService, false);
 
-            mvc.perform(put("/w2m/superhero/update/" + SUPERHERO_ID)
-                            .content(mapper.writeValueAsString(mockSuperhero()))
+            mvc.perform(MockMvcRequestBuilders.put("/w2m/superhero/update/" + Constants.SUPERHERO_ID)
+                            .content(mapper.writeValueAsString(Mocks.mockSuperhero()))
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isNotFound());
@@ -146,11 +152,13 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when fails updating superhero by updated name already exists")
         void testWhenFailsUpdatingSuperheroByUpdatedNameAlreadyExists() throws Exception {
-            SuperHero request = mockSuperhero();
-            superheroServiceExistsByIdMock(superheroService, true);
-            superheroServiceExistsByNameMock(superheroService, true);
+            Superhero request = Mocks.mockSuperhero();
+            request.setName("Other name");
+            Mocks.superheroServiceExistsByIdMock(superheroService, true);
+            Mocks.superheroServiceExistsByNameMock(superheroService, true);
+            Mocks.superheroServiceFindByIdMock(superheroService, Mocks.mockSuperhero());
 
-            mvc.perform(put("/w2m/superhero/update/" + SUPERHERO_ID)
+            mvc.perform(MockMvcRequestBuilders.put("/w2m/superhero/update/" + Constants.SUPERHERO_ID)
                             .content(mapper.writeValueAsString(request))
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
@@ -164,10 +172,10 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when superhero is deleted successfully")
         void testWhenSuperheroIsDeletedSuccessfully() throws Exception {
-            superheroServiceExistsByIdMock(superheroService, true);
-            superheroServiceDeleteMock(superheroService);
+            Mocks.superheroServiceExistsByIdMock(superheroService, true);
+            Mocks.superheroServiceDeleteMock(superheroService);
 
-            mvc.perform(delete("/w2m/superhero/delete/" + SUPERHERO_ID)
+            mvc.perform(MockMvcRequestBuilders.delete("/w2m/superhero/delete/" + Constants.SUPERHERO_ID)
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isOk());
@@ -176,10 +184,10 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when throws exception trying to deleted superhero")
         void testWhenThrowsExceptionTryingToDeletedSuperhero() throws Exception {
-            superheroServiceExistsByIdMock(superheroService, true);
-            superheroServiceDeleteThrowsExceptionMock(superheroService, ApiException("Error trying to delete"));
+            Mocks.superheroServiceExistsByIdMock(superheroService, true);
+            Mocks.superheroServiceDeleteThrowsExceptionMock(superheroService, new ApiException("Error trying to delete"));
 
-            mvc.perform(delete("/w2m/superhero/delete/" + SUPERHERO_ID)
+            mvc.perform(MockMvcRequestBuilders.delete("/w2m/superhero/delete/" + Constants.SUPERHERO_ID)
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isInternalServerError());
@@ -188,9 +196,9 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when fails deleting superhero by id not found")
         void testWhenFailsDeletingSuperheroByIdNotFound() throws Exception {
-            superheroServiceExistsByIdMock(superheroService, false);
+            Mocks.superheroServiceExistsByIdMock(superheroService, false);
 
-            mvc.perform(delete("/w2m/superhero/update/" + SUPERHERO_ID)
+            mvc.perform(MockMvcRequestBuilders.delete("/w2m/superhero/delete/" + Constants.SUPERHERO_ID)
                             .contentType(MediaType.APPLICATION_JSON)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isNotFound());
@@ -203,43 +211,41 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when superhero is found by id successfully")
         void testWhenSuperheroIsFoundByIdSuccessfully() throws Exception {
-            superheroServiceFindByIdMock(superheroService, mockSuperhero());
+            Mocks.superheroServiceFindByIdMock(superheroService, Mocks.mockSuperhero());
 
-            mvc.perform(get("/w2m/superhero/" + SUPERHERO_ID)
+            mvc.perform(MockMvcRequestBuilders.get("/w2m/superhero/" + Constants.SUPERHERO_ID)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$.superheroId").isNumber())
-                    .andExpect(jsonPath("$.name").value(SUPERHERO_NAME));
+                    .andExpect(jsonPath("$.name").value(Constants.SUPERHERO_NAME));
         }
 
         @Test
         @DisplayName("Test when throws an exception trying to find superhero by id")
         void testWhenThrowsAnExceptionTryingToFindSuperheroById() throws Exception {
-            superheroServiceFindByIdThrowsExceptionMock(superheroService, ApiException("Error getting data"));
+            Mocks.superheroServiceFindByIdThrowsExceptionMock(superheroService, new ApiException("Error getting data"));
 
-            mvc.perform(get("/w2m/superhero/" + SUPERHERO_ID)
+            mvc.perform(MockMvcRequestBuilders.get("/w2m/superhero/" + Constants.SUPERHERO_ID)
                             .accept(MediaType.APPLICATION_JSON))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.superheroId").isNumber())
-                    .andExpect(jsonPath("$.name").value(SUPERHERO_NAME));
+                    .andExpect(status().isInternalServerError());
         }
 
         @Test
         @DisplayName("Test when all superheros are listed successfully")
         void testWhenAllSuperherosAreListedSuccessfully() throws Exception {
-            superheroServiceFindAllMock(superheroService, Arrays.asList(mockSuperhero()));
+            Mocks.superheroServiceFindAllMock(superheroService, List.of(Mocks.mockSuperhero()));
 
             mvc.perform(get("/w2m/superhero/list")
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$[0].superheroId").isNumber())
-                    .andExpect(jsonPath("$[0].name").value(SUPERHERO_NAME));
+                    .andExpect(jsonPath("$[0].name").value(Constants.SUPERHERO_NAME));
         }
 
         @Test
         @DisplayName("Test when throws an exception trying to list all superheros")
         void testWhenThrowsAnExceptionTryingToListAllSuperheros() throws Exception {
-            superheroServiceFindAllThrowsExceptionMock(superheroService, ApiException("Error listing data"));
+            Mocks.superheroServiceFindAllThrowsExceptionMock(superheroService, new ApiException("Error listing data"));
 
             mvc.perform(get("/w2m/superhero/list")
                             .accept(MediaType.APPLICATION_JSON))
@@ -249,21 +255,21 @@ public class SuperheroControllerTest {
         @Test
         @DisplayName("Test when find superheros by name part successfully")
         void testWhenFindSuperherosByNamePartSuccessfully() throws Exception {
-            superheroServiceFindByNamePartMock(superheroService, Arrays.asList(mockSuperhero()));
+            Mocks.superheroServiceFindByNamePartMock(superheroService, List.of(Mocks.mockSuperhero()));
 
-            mvc.perform(get("/w2m/superhero/name-part/" + SUPERHERO_NAME_PART)
+            mvc.perform(MockMvcRequestBuilders.get("/w2m/superhero/name-part/" + Constants.SUPERHERO_NAME_PART)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$[0].superheroId").isNumber())
-                    .andExpect(jsonPath("$[0].name").value(SUPERHERO_NAME));
+                    .andExpect(jsonPath("$[0].name").value(Constants.SUPERHERO_NAME));
         }
 
         @Test
         @DisplayName("Test when find superheros by name part throws an exception")
         void testWhenFindSuperherosByNamePartThrowsAnException() throws Exception {
-            superheroServiceFindByNamePartThrowsExceptionMock(superheroService, new ApiException("Error listing data"));
+            Mocks.superheroServiceFindByNamePartThrowsExceptionMock(superheroService, new ApiException("Error listing data"));
 
-            mvc.perform(get("/w2m/superhero/name-part/" + SUPERHERO_NAME_PART)
+            mvc.perform(MockMvcRequestBuilders.get("/w2m/superhero/name-part/" + Constants.SUPERHERO_NAME_PART)
                             .accept(MediaType.APPLICATION_JSON))
                     .andExpect(status().isInternalServerError());
         }
